<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@android:color/holo_orange_light">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:drawableLeft="@mipmap/ic_dhllogo"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="10pt"
        android:textStyle="bold"
        android:shadowColor="@android:color/white"
        android:shadowRadius="5"
        android:visibility="visible" />

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="2">
    <TableRow>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/label_client_id"

            android:layout_marginBottom="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <EditText
            android:id="@+id/input_clientid"
            android:layout_width="195dp"
            android:layout_height="37dp"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/input_client_id"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/label_password"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <EditText
            android:id="@+id/input_password"
            android:layout_width="188dp"
            android:layout_height="39dp"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/input_password"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </TableRow>
</TableLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:onClick="getAccessToken"
        android:text="@string/button_login" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/label_enter_shipmentId"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:cursorVisible="true"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:imeOptions="actionGo"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:selectAllOnFocus="false"
        android:shadowColor="@android:color/darker_gray"
        android:text="@string/input_shipmentID"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@android:color/holo_orange_dark"
        android:typeface="normal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="0.57" />

    <Button
        android:id="@+id/trackNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_tracknow"
        android:drawableTop="@drawable/ic_notifications_black_24dp"
        android:visibility="visible"
        android:clickable="true"
        android:onClick="onTrackNow"
        android:background="@android:color/holo_orange_dark"/>


</LinearLayout>
    <!--</android.support.constraint.ConstraintLayout>-->
