<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--tools:context="org.manahan.tech.trackyourshipment.LandingPage">-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="org.manahan.tech.trackyourshipment.LandingPage">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="@string/title_home"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="getAccessToken"
        android:text="@string/button_login"
        tools:text="@string/button_login"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/label_enter_shipmentId"

        tools:text="@string/label_enter_shipmentId"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="328dp"
        android:layout_height="172dp"
        android:layout_marginBottom="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:cursorVisible="true"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:imeOptions="actionGo"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:shadowColor="@android:color/darker_gray"
        android:text="@string/input_shipmentID"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@android:color/holo_orange_dark"
        android:typeface="normal"

        tools:background="@android:color/holo_orange_light"
        tools:text="@string/input_shipmentID"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:elevation="0dp"
        android:text="@string/button_tracknow"
        android:visibility="visible"
        tools:text="@string/button_tracknow"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/label_client_id"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/label_password"

        tools:text="@string/label_password"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/input_clientid"
        android:layout_width="195dp"
        android:layout_height="37dp"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/input_client_id"
        android:textSize="14sp"

        tools:text="@string/input_client_id"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="188dp"
        android:layout_height="39dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/input_password"
        android:textSize="14sp"

        tools:text="@string/input_password"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
</LinearLayout>
<!--</android.support.constraint.ConstraintLayout>-->
